k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-deployment
  labels:
    app: todo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      # INTENTIONAL WEAKNESS: Assign the cluster-admin service account
      serviceAccountName: cluster-admin-sa
      containers:
      - name: todo-app
        # IMPORTANT: This image URL will be updated by our CI/CD pipeline
        image: 992382748784.dkr.ecr.us-east-1.amazonaws.com/wiz-exercise/app:latest
        ports:
        - containerPort: 3000
